--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +7,4 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<p>@ViewBag.Message</p>
