--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Register.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,10 +17,16 @@
                 <label asp-for="Input.UserName">Username</label>
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Tag" class="form-control" autocomplete="tag" aria-required="true" placeholder="tag" />
+                <label asp-for="Input.Tag">Tag</label>
+                <span asp-validation-for="Input.Tag" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
