--- a/main/BitBracket/src/BitBracket/Views/Announcements/_AnnouncementsPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_AnnouncementsPartial.cshtml
@@ -1,4 +1,3 @@
-<!-- _AnnouncementsPartial.cshtml -->
-<div id="announcementsList">
-    <!-- Announcements fetched via JavaScript will be displayed here -->
+<div id="announcementsList" class="ui stackable cards">
+    <!-- Dynamic content will be injected here -->
 </div>
