--- a/main/BitBracket/src/BitBracket/wwwroot/css/site.css
+++ b/main/BitBracket/src/BitBracket/wwwroot/css/site.css
@@ -47,14 +47,14 @@ body {
     padding: 0;
 }
 
-.container {
+/* .container {
     max-width: 800px;
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+} */
 
 h1 {
     text-align: center;
@@ -75,4 +75,23 @@ h1 {
 
 .profile-info p {
     margin: 0;
+}
+
+.section-gap {
+  margin-bottom: 20px;
+}
+
+.announcement-background {
+  background-color: #00363f;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.title-styling {
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  padding: 20px 0;
+  font-weight: bold; /* Make the font bolder */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add a subtle shadow for depth */
 }
