--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Announcements and Notifications";
 }
-
+<body class="announcement-background">
 <div class="announcement-background">
     <div class="ui container">
         <h2 class="title-styling">@ViewData["Title"]</h2>
@@ -17,7 +17,7 @@
         </section>
     </div>
 </div>
-
+</body>
 @section Scripts {
     <script src="~/js/announcementForm.js"></script> 
 }
