commiting final cleanup of pages and identity pages

--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Register confirmed";
 }
-
+<body class="announcement-background">
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
@@ -23,5 +23,7 @@
         <p>
             Please check your email to confirm your account.
         </p>
+
     }
 }
+</body>
