--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -34,10 +34,10 @@
     </body>
 }
 else
-{<div class="announcement-background">
+{<body class="announcement-background">
     <div class="ui container">
             <h1 class="title-styling">Welcome, in order to make the most of your experience please register and/or login</h1>
     </div>
-</div>
+</body>
 }
 
