--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Announcements and Notifications";
 }
 <body class="announcement-background">
+<div class="section-gap"></div>
 <div class="announcement-background">
     <div class="ui container">
         <h2 class="title-styling">@ViewData["Title"]</h2>
