--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<body class="announcement-background">
+    <div class="section-gap"></div>
+<div class="announcement-background">
+    <div class="ui container">
+        <h1 class="title-styling">BitBracket</h1>
+        <p class="text-styling"> Welcome to BitBracket, your ultimate platform for organizing and participating in tournaments.</p>
+    </div>
 </div>
-<p>@ViewBag.Message</p>
+</body>
