--- a/main/BitBracket/src/BitBracket/Views/Shared/_LoginPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,19 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+<div class="ui secondary menu navbar-background">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <a class="item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <i class="user circle icon"></i>Hello @User.Identity?.Name!
+        </a>
+        <form class="item" asp-area="Identity" asp-page="/Account/Logout" method="post" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button type="submit" class="ui button basic">Logout</button>
         </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>
+    }
+    else
+    {
+        <a class="item" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="item" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    }
+</div>
