--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Login.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,43 +4,44 @@
 @{
     ViewData["Title"] = "Log in";
 }
+
 <body class="announcement-background">
-    <h1 class="title-styling">@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4 offset-md-4 text-center">
-        <section>
-            <form id="account" method="post">
-                    <h2 class="title-styling">Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.Email" class="form-label">Email</label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+    <div class="section-gap"></div>
+    <div class="ui container">
+        <h1 class="title-styling">@ViewData["Title"]</h1>
+        <div class="ui grid">
+            <div class="ui centered row">
+                <div class="six wide column">
+                    <form id="account" method="post" class="ui form segment raised">
+                        <h2 class="ui header">Log-in to your Account.</h2>
+                        <div asp-validation-summary="ModelOnly" class="ui message negative" role="alert"></div>
+                        <div class="field">
+                            <label asp-for="Input.Email">Email</label>
+                            <input asp-for="Input.Email" autocomplete="username" aria-required="true" placeholder="name@example.com">
+                            <span asp-validation-for="Input.Email" class="ui pointing red basic label"></span>
+                        </div>
+                        <div class="field">
+                            <label asp-for="Input.Password">Password</label>
+                            <input asp-for="Input.Password" autocomplete="current-password" aria-required="true" placeholder="Password">
+                            <span asp-validation-for="Input.Password" class="ui pointing red basic label"></span>
+                        </div>
+                        <div class="field">
+                            <div class="ui checkbox">
+                                <input asp-for="Input.RememberMe" type="checkbox">
+                                <label asp-for="Input.RememberMe">@Html.DisplayNameFor(m => m.Input.RememberMe)</label>
+                            </div>
+                        </div>
+                        <button id="login-submit" type="submit" class="ui button primary fluid">Log in</button>
+                        <div class="ui message">
+                            New to us? <a href="@Url.Page("/Account/Register")">Register Now!</a>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Password</label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                    <div class="checkbox mb-3 title-styling">
-                    <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-
-            </form>
-        </section>
+            </div>
+        </div>
     </div>
+
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 </body>
-    @*
-
-*@
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
