--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Register.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,51 +1,56 @@
 ﻿@page
 @model RegisterModel
+
 @{
     ViewData["Title"] = "Register";
 }
 
-<h1 class="title-styling">@ViewData["Title"]</h1>
 <body class="announcement-background">
-<div class="row">
-        <div class="col-md-4 offset-md-4 text-center">
-            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2 class="title-styling">Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" placeholder="username" />
-                <label asp-for="Input.UserName">Username</label>
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
+    <div class="section-gap"></div>
+    <div class="ui container">
+        <h1 class="title-styling">@ViewData["Title"]</h1>
+        <div class="ui segment">
+            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="ui form">
+                <h2 class="ui dividing header">Create a new account.</h2>
 
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Tag" class="form-control" autocomplete="tag" aria-required="true" placeholder="tag" />
-                <label asp-for="Input.Tag">Tag</label>
-                <span asp-validation-for="Input.Tag" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
+                <div asp-validation-summary="ModelOnly" class="ui negative message"></div>
 
+                <div class="field">
+                    <label asp-for="Input.UserName">Username</label>
+                    <input asp-for="Input.UserName" placeholder="Username">
+                    <span asp-validation-for="Input.UserName" class="ui red text"></span>
+                </div>
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
+                <div class="field">
+                    <label asp-for="Input.Email">Email</label>
+                    <input asp-for="Input.Email" placeholder="Email">
+                    <span asp-validation-for="Input.Email" class="ui red text"></span>
+                </div>
+
+                <div class="field">
+                    <label asp-for="Input.Tag">Tag</label>
+                    <input asp-for="Input.Tag" placeholder="Tag">
+                    <span asp-validation-for="Input.Tag" class="ui red text"></span>
+                </div>
+
+                <div class="field">
+                    <label asp-for="Input.Password">Password</label>
+                    <input asp-for="Input.Password" type="password" placeholder="Password">
+                    <span asp-validation-for="Input.Password" class="ui red text"></span>
+                </div>
+
+                <div class="field">
+                    <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                    <input asp-for="Input.ConfirmPassword" type="password" placeholder="Confirm Password">
+                    <span asp-validation-for="Input.ConfirmPassword" class="ui red text"></span>
+                </div>
+
+                <button id="registerSubmit" type="submit" class="ui button primary fluid">Register</button>
+            </form>
+        </div>
     </div>
-
-</div>
 </body>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
