--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,29 +1,31 @@
 ﻿@page
 @model RegisterConfirmationModel
-@{
-    ViewData["Title"] = "Register confirmed";
-}
-<body class="announcement-background">
-<h1>@ViewData["Title"]</h1>
-@{
-    if (@Model.DisplayConfirmAccountLink)
-    {
-        <p>
-            This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-            Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-        </p>
-        <script>
-            document.addEventListener("DOMContentLoaded", function() {
-                document.getElementById("confirm-link").click();
-            });
-        </script>
-    }
-    else
-    {
-        <p>
-            Please check your email to confirm your account.
-        </p>
 
-    }
+@{
+    ViewData["Title"] = "Register Confirmed";
 }
+
+<body class="announcement-background">
+    <div class="section-gap"></div>
+    <div class="ui container">
+        <h1 class="title-styling">@ViewData["Title"]</h1>
+        <div class="ui message">
+            @if (Model.DisplayConfirmAccountLink)
+            {
+                <p>
+                    This app does not currently have a real email sender registered. For information on how to configure a real email sender, please see <a href="https://aka.ms/aspaccountconf" target="_blank" rel="noopener noreferrer">these docs</a>. Normally, this link would be emailed to you: <a id="confirm-link" href="@Model.EmailConfirmationUrl" class="ui primary">Click here to confirm your account</a>.
+                </p>
+                <script>
+                    document.addEventListener("DOMContentLoaded", function() {
+                        // Optionally, automatically click the confirmation link
+                        // document.getElementById("confirm-link").click();
+                    });
+                </script>
+            }
+            else
+            {
+                <p>Please check your email to confirm your account.</p>
+            }
+        </div>
+    </div>
 </body>
