--- a/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Create a new Announcement";
 }
 
+<body class="announcement-background">
+<div class="section-gap"></div>
 <div class="announcement-background">
     <div class="ui container">
         <h2 class="title-styling">@ViewData["Title"]</h2>
@@ -15,7 +17,7 @@
         <a href="@Url.Action("Announcement", "Home")" class="ui button secondary">Return to Announcement Page</a>
     </div>
 </div>
-
+</body>
 @section Scripts {
     <script src="~/js/announcementCreateForm.js"></script> 
 }
