--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -28,41 +28,30 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BitBracket</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Announcement">Announcements</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-
-                    </ul>
+        <div class="ui menu borderless navbar-background">
+            <div class="ui container">
+                <a class="header item" asp-area="" asp-controller="Home" asp-action="Index">BitBracket</a>
+                <a class="item" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="item" asp-area="" asp-controller="Home" asp-action="Announcement">Announcements</a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a class="item" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
+                }
+                <a class="item" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
+                
+                <div class="right menu">
                     <partial name="_LoginPartial" />
                 </div>
             </div>
-        </nav>
+        </div>
     </header>
-    <div class="container">
+    <div class="ui container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+
+
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
