Adding the SMS feature files

--- a/main/BitBracket/src/BitBracket/Views/Home/Privacy.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Privacy.cshtml
@@ -1,6 +1,46 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<body class="announcement-background"></body>
+<div class="ui container announcement-background" style="padding-top: 20px;">
+    <h1 class="ui center aligned header title-styling">About BitBracket</h1>
+    <p class="text-styling">
+        BitBracket is a comprehensive platform designed to enhance your tournament experience. Offering a wide range of features from live updates to in-depth analysis, BitBracket ensures fans, players, and organizers have everything they need at their fingertips.
+    </p>
+
+    <div class="ui section divider"></div>
+
+    <h2 class="ui center aligned header title-styling">Our Policy</h2>
+        <p class="text-styling">
+            At BitBracket, we are committed to ensuring the privacy and security of our users. Our policy outlines the types of information we collect, how it is used, and the measures we take to protect your data. We are dedicated to transparency and empowering our users with clear choices about their information.
+        </p>
+
+    <div class="ui section divider"></div>
+
+    <h2 class="ui center aligned header title-styling">Meet The Team</h2>
+    <div class="ui three stackable cards">
+        <div class="card">
+            <div class="ui vertical animated button" style="width: 100%;">
+                <div class="hidden content">GitHub Owner / Developer</div>
+                <div class="visible content">Will Ollenbrook</div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="ui vertical animated button" style="width: 100%;">
+                <div class="hidden content">GitHub Collaborator / Developer</div>
+                <div class="visible content">Mohammed Alsalem</div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="ui vertical animated button" style="width: 100%;">
+                <div class="hidden content">GitHub Collaborator / Developer</div>
+                <div class="visible content">Miguel Medina Ortiz</div>
+            </div>
+        </div>
+    </div>
+    <div class="ui section divider"></div>
+    <p class="text-styling">
+        For any inquiries, please reach out to us at <a href="mailto:BitBracketApp@gmail.com" class="ui teal">BitBracketApp@gmail.com</a>.
+    </p>
+</div>
