For github testing
Correcting local repository

--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -8,5 +8,6 @@
         <h1 class="title-styling">BitBracket</h1>
         <p class="text-styling"> Welcome to BitBracket, your ultimate platform for organizing and participating in tournaments.</p>
     </div>
+    @await Html.PartialAsync("_CreateBracketPartial")
 </div>
 </body>
